[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rss-analyzer"
version = "1.0.0"
description = "RSS Feed Article Analyzer that automatically fetches and analyzes academic papers from RSS feeds using AI APIs"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "RSS Analyzer", email = "noreply@github.com"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.11,<3.13"
dependencies = [
    "feedparser==6.0.10",
    "requests==2.31.0",
    "beautifulsoup4==4.12.2",
    "mistralai==1.0.0",
    "anthropic>=0.34.0",
    "python-dotenv==1.0.0",
    "click==8.1.7",
    "tqdm==4.66.1",
    "python-dateutil>=2.8.2",
    "markdownify==0.11.6",
    "lxml>=5.0.0",
    "urllib3==2.0.7",
    "charset-normalizer==3.3.2",
    "pyyaml==6.0.1",
    "openai>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "ruff==0.12.2",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[project.scripts]
rss-analyzer = "src.main:main"

[project.urls]
Homepage = "https://github.com/pmadruga/rss-analyzer"
Repository = "https://github.com/pmadruga/rss-analyzer"
Issues = "https://github.com/pmadruga/rss-analyzer/issues"

[tool.uv]
dev-dependencies = [
    "ruff==0.12.2",
    "pre-commit>=3.0.0",
]

[tool.ruff]
# Import from existing ruff.toml configuration
target-version = "py311"
line-length = 88

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "SIM",    # flake8-simplify
    "I",      # isort
    "N",      # pep8-naming
    "C4",     # flake8-comprehensions
    "PIE",    # flake8-pie
    "T20",    # flake8-print
    "RUF",    # Ruff-specific rules
]

ignore = [
    "E501",   # Line too long (handled by formatter)
    "T201",   # Print statements allowed
    "B008",   # Do not perform function calls in argument defaults
]

exclude = [
    ".git",
    "__pycache__",
    ".venv",
    "venv",
    "build",
    "dist",
    "*.egg-info",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ruff.lint.isort]
known-first-party = ["src"]
force-single-line = false

[tool.ruff.lint.mccabe]
max-complexity = 10
